# hdl_rules

./: MODULE.bazel
filelist/: BUILD.bazel  defs.bzl  providers.bzl
jinja2/: BUILD.bazel  defs.bzl  providers.bzl
jinja2/default_renderer/: BUILD.bazel  default_renderer.py
jinja2/utils/: BUILD.bazel  constant_type.j2  parameters_dump.j2  rtl_header.j2
verilog/: defs.bzl  providers.bzl
