load("@rules_python//python:defs.bzl", "py_binary")

package(
    default_visibility = ["//jinja2:__subpackages__"],
)

py_binary(
    name="default_renderer",
    srcs = ["default_renderer.py"],
    legacy_create_init = False,
    main = "default_renderer.py",
    visibility = ["//visibility:public"],
)
